--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -1,6 +1,9 @@
 name: Python application
 
-on: [push]
+on: 
+ push:
+  branches:
+    - main
   
 
 jobs:
@@ -38,10 +41,10 @@ jobs:
       run: |
         cd decide
         python manage.py migrate
-    - name: Run tests
+    - name: Run test voting
       run: |
         cd decide
-        coverage run --branch --source=. ./manage.py test  --keepdb 
+        coverage run --branch --source=voting ./manage.py test voting  --keepdb 
         coverage xml 
     - name: Codacy Coverage Reporter
       uses: codacy/codacy-coverage-reporter-action@v1
