--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -20,7 +20,7 @@ jobs:
           POSTGRES_DB: decide
         ports:
           - 5432:5432
-        # needed because the postgres container does not provide a healthcheck
+        # needed because the postgres container does not provide a healthcheckK
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
 
     steps:
