--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -10,6 +10,9 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    strategy:
+    matrix:
+      python-version: [3.10.12, 3.11]
 
     services:
       postgres:
@@ -28,10 +31,7 @@ jobs:
     - name: Set up Python 3.10.12
       uses: actions/setup-python@v4
       with:
-        python-version: [
-          3.10.12,
-          3.11
-        ]
+        python-version: 3.10.12
     - name: psycopg2 prerequisites
       run: sudo apt-get install libpq-dev
     - name: Install dependencies and config
