--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -1,14 +1,20 @@
+PARTE ACTION
+yaml.py
+
+
+
 name: Python application
 
-on: 
- push:
-  branches:
-    - main
-  
+on:
+  push:
+    branches:
+      - main
+  release:
+    types:
+      - created
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -23,15 +29,14 @@ jobs:
           POSTGRES_DB: decide
         ports:
           - 5432:5432
-        # needed because the postgres container does not provide a healthcheckK
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Python ${{matrix.python-version}}
+    - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v4
       with:
-        python-version: ${{matrix.python-version}}
+        python-version: ${{ matrix.python-version }}
     - name: psycopg2 prerequisites
       run: sudo apt-get install libpq-dev
     - name: Install dependencies and config
@@ -44,13 +49,28 @@ jobs:
       run: |
         cd decide
         python manage.py migrate
-    - name: Run test voting
+    - name: Run voting tests only
       run: |
         cd decide
-        coverage run --branch --source=voting ./manage.py test voting  --keepdb 
+        coverage run --branch --source=voting ./manage.py test voting --keepdb 
         coverage xml 
     - name: Codacy Coverage Reporter
       uses: codacy/codacy-coverage-reporter-action@v1
       with:
           project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
-          coverage-reports: decide/coverage.xml 
+          coverage-reports: decide/coverage.xml
+
+  release:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v4
+      with:
+        python-version: ${{ matrix.python-version }}
+
+    - name: Install dependencies
+      run: python -m pip install --upgrade pip
