--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -18,7 +18,8 @@ jobs:
 
     services:
       postgres:
-        image: postgres: ${{matrix.postgres-version}}
+        image: 
+          postgres: ${{matrix.postgres-version}}
         env:
           POSTGRES_USER: decide
           POSTGRES_PASSWORD: decide
